--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
             <h2>About Me</h2>
 
-            <p>I'm a pre-final year Computer Science Engineering Student at Hindusthan College of Engineering and Technology,Coimbatore.Event organizer of youth wings club and AKS charity trust member.Tech Addict and Motivational Speaker.
+            <p>I'm a final year Computer Science Engineering Student at Hindusthan College of Engineering and Technology,Coimbatore.Event organizer of youth wings club and AKS charity trust member.Tech Addict and Motivational Speaker.
             </p>
 
             <div class="row">
