--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
 
             <ul class="social-links">
                <li><a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="https://www.facebook.com/"><i class="fa fa-twitter"></i></a></li>
+               <li><a href="https://twitter.com/dinesh2weets><i class="fa fa-twitter"></i></a></li>
                <li><a href="https://www.facebook.com/"><i class="fa fa-google-plus"></i></a></li>
                <li><a href="https://www.facebook.com/"><i class="fa fa-linkedin"></i></a></li>
             </ul>
