--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
-               <li><a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a></li>
+               <li><a href="https://www.facebook.com/hitzzdinesh97?ref=bookmarks"><i class="fa fa-facebook"></i></a></li>
                <li><a href="https://www.twitter.com/"><i class="fa fa-twitter"></i></a></li>
                <li><a href="https://www.google-plus.com/"><i class="fa fa-google-plus"></i></a></li>
                <li><a href="https://www.linkedin.com/"><i class="fa fa-linkedin"></i></a></li>
